--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^5.3.0",
     "react-image-crop": "^11.0.7",
     "react-lazyload": "^3.2.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
