--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.4",
     "@paypal/react-paypal-js": "^8.7.0",
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -35,10 +36,12 @@
     "react-bootstrap": "^2.10.5",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.57.0",
     "react-icons": "^5.3.0",
     "react-image-crop": "^11.0.7",
     "react-lazyload": "^3.2.1",
     "react-leaflet": "^4.2.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
