--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.3.0",
     "react-image-crop": "^11.0.7",
+    "react-js-loader": "^0.1.3",
     "react-lazyload": "^3.2.1",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
