--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.475.0",
+    "moment": "^2.30.1",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
