--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-js-loader": "^0.1.3",
     "react-lazyload": "^3.2.1",
     "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
