--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
+    "@vercel/analytics": "^1.4.1",
     "antd": "^5.25.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
